Reform the project

--- a/BlazeWebShop/wwwroot/appsettings.json
+++ b/BlazeWebShop/wwwroot/appsettings.json
@@ -8,5 +8,24 @@
     "Authority": "https://login.microsoftonline.com/22222222-2222-2222-2222-222222222222",
     "ClientId": "33333333-3333-3333-33333333333333333",
     "ValidateAuthority": true
-  }
+
+  },
+
+
 }
+
+//{
+//  "Logging": {
+//    "LogLevel": {
+//      "Default": "Information",
+//      "Microsoft": "Warning",
+//      "Microsoft.Hosting.Lifetime": "Information"
+//    }
+//  },
+//  "AllowedHosts": "*",
+//  "ConnectionStrings": {
+//    "myconn": "server=ATS16499\\SQLEXPRESS; database=WebShop;Trusted_Connection=True;"
+//  }
+//} 
+
+
